# django-photoshare

./: .env  .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
photos/: admin.py  models.py  urls.py  views.py
photos/migrations/: 0001_initial.py  0002_auto_20210303_1355.py  0003_thumbnail.py
photos/templates/photos/: gallery.html  photo.html
photoshare/: settings.py  urls.py
